<resources>
    <string name="app_name">ToDo App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="time">time</string>
    <string name="network">network</string>
    <string name="download_plan">download</string>
    <string name="upload_plan">upload</string>
    <string name="share_plan">share</string>

    <string name="count_down">Count Down</string>
    <string name="btn_play">Start</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_stop">Stop</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">login</string>
    <string name="login_title">ToDoApp</string>
    <string name="exit">logout</string>
    <string name="data">data</string>
    <string name="date">date</string>
    <string name="sortByTime">time</string>
</resources>