<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:padding="24dp"
    tools:context=".fragments.add.AddFragment"
    android:background="@drawable/add1_bg">


    <EditText
        android:id="@+id/title_et"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/priorities_spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:background="@android:color/transparent"
        android:entries="@array/priorities"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_et" />


    <EditText
        android:id="@+id/date_et"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:cursorVisible="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="none"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorities_spinner" />

    <EditText
        android:id="@+id/description_et"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="120dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_et" />

    <EditText
        android:id="@+id/time_et"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:cursorVisible="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="none"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toEndOf="@+id/date_et"
        app:layout_constraintTop_toBottomOf="@+id/priorities_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>