<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="args"
            type="com.example.todoapp.fragments.update.UpdateFragmentArgs" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".fragments.update.UpdateFragment"
        android:background="@drawable/update_bg">


        <EditText
            android:id="@+id/current_title_et"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="100dp"
            android:alpha="0.8"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@{args.currentItem.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/current_priorities_spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:alpha="0.8"
            android:background="@drawable/custom_input"
            android:entries="@array/priorities"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:parsePriorityToInt="@{args.currentItem.priority}"
            android:popupBackground="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_title_et" />

        <EditText
            android:id="@+id/current_date_et"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:alpha="0.8"
            android:background="@drawable/custom_input"
            android:cursorVisible="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date"
            android:inputType="none"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:parseDate="@{args.currentItem.registerTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_priorities_spinner" />

        <EditText
            android:id="@+id/current_time_et"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:alpha="0.8"
            android:background="@drawable/custom_input"
            android:cursorVisible="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/time"
            android:inputType="none"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:parseTime="@{args.currentItem.registerTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.241"
            app:layout_constraintStart_toEndOf="@+id/current_date_et"
            app:layout_constraintTop_toBottomOf="@+id/current_priorities_spinner" />

        <EditText
            android:id="@+id/current_description_et"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="145dp"
            android:alpha="0.8"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:text="@{args.currentItem.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_date_et" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>